# Agentic-Permitting

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-env-access.py
.claude/rules/: security.md  testing.md  tools.md
.claude/skills/convention-audit/: SKILL.md
MCP/: Dockerfile  github_api.py  host.py
mcp_github_example/: ARCHITECTURE.md
mcp_github_example/http/: client.py  host.py  server.py
