[project]
name = "permit-mcp"
version = "0.1.0"
description = "Permit Intelligence MCP server (FastMCP) + reference examples"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "mcp>=1.0",
    "anthropic>=0.40",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
